Fix some spacing

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
   font-size: 10px;
   box-sizing: border-box;
   word-wrap: break-word;
-  font-family: sans-serif;
+  font-family: 'Pretendard Variable', 'Pretendard JP Variable', -apple-system, BlinkMacSystemFont, 'system-ui', 'Roboto', 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
 body {
